--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     font-weight: bolder;    
 }
-.question {
+.question, .explanation {
     background-color: #69497a;
     color: #fefefe;
     font-family: 'Slackey', cursive;
