--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,16 @@ body {
     color: #fefefe;
     font-family: 'Slackey', cursive;
 }
+.howToPlay {
+    background-color: #0c6642;
+}
 .timer {
     background-color: #6c757d;
     color: #fff200;
     font-family: 'Orbitron', sans-serif;
     font-weight: bolder;    
 }
-.question, .explanation {
+.question, .explanation, .instructionHeading {
     background-color: #69497a;
     color: #fefefe;
     font-family: 'Slackey', cursive;
